@@ -1,4 +1,4 @@
-
+var _TWebWndLoading = null
 //----------------------------------------------------------------------------//
 
 function MsgInfo( cMsg, cTitle, cIcon, fCallback ) {
@@ -294,6 +294,16 @@ function TWebBrowse( cId ) {
 	this.Select = function() {
 	    return oBrowse.bootstrapTable('getSelections')
 	}
+	
+	this.Loading = function( lOnOff ) {
+	
+		lOnOff = ( typeof( lOnOff ) === 'boolean') ? lOnOff : true;
+		
+		if ( lOnOff )
+			oBrowse.bootstrapTable('showLoading')	
+		else
+			oBrowse.bootstrapTable('hideLoading')		
+	}
 
 	
 	this.Init = function() {	    
@@ -316,7 +326,7 @@ function TWebBrowse( cId ) {
 
 /*	List rows in table and select one of them	*/
 
-function BrwSelect( headers, rows, fCallback, cTitle ) {
+function TWebBrwSelect( headers, rows, fCallback, cTitle ) {
 
 	cTitle 	= (typeof cTitle ) == 'string' ? cTitle : '<i class="far fa-check-square"></i> Select' ;
 	
@@ -336,7 +346,7 @@ function BrwSelect( headers, rows, fCallback, cTitle ) {
 	var dialog = bootbox.dialog({
 		title: cTitle,
 		message: cMsg,
-		size: 'medium',
+		size: 'large',
 		backdrop: false,
 		onEscape: true, 
 		className: 'bounce fadeOut',
@@ -366,6 +376,110 @@ function BrwSelect( headers, rows, fCallback, cTitle ) {
 		oBrw.SetData( rows ) 
 	})				
 }	
+
+//	-------------------------------------------------------------------------------------//
+
+function TWebBrwSearch( cUrl, aHeaders, fCallback, cSearch, cTitle ) {
+
+	cSearch = (typeof cSearch ) == 'string' ? cSearch : '' ;
+	cTitle 	= (typeof cTitle ) == 'string' ? cTitle : '<i class="fas fa-search"></i> Buscar' ;
+
+
+	
+	var nBrwHeight 	= 400
+	var cMsg 		=   '<div class="form-group">' +
+						' <div class="col-12">' +
+						'  <div class="input-group">' +
+						'   <input type="text" class="form-control" id="_search" value="' + cSearch + '">' +
+						'   <div class="input-group-append">' +
+						'    <button class="btn btn-outline-secondary " type="button" onclick="_Search()">' +
+						' 	  <i class="fas fa-search"></i> Search' +
+						'    </button>' +
+						'    <span id="_total" class="input-group-text">0</span>' +
+						'   </div>' +
+						'  </div>' +
+						' </div>' + 
+						'</div>' + 
+						'<table id="_twebbrwsearch" class="table-sm table-striped" ' + 
+						'data-single-select="true" data-click-to-select="true" ' + 
+						'data-locale="es-ES" ' + 
+						'data-height=' + nBrwHeight + ' data-toggle="table">' + 
+						'<thead class="thead-dark"><tr>' + 
+						'<th data-field="c" data-checkbox="true"></th>' 
+					
+		for (var key in aHeaders ) {							
+			cMsg += '<th data-field="' + key + '">' + aHeaders[key] + '</th>' 
+		}
+
+		cMsg += '</tr></thead></table>'
+
+	var dialog = bootbox.dialog({
+		title: cTitle,
+		message: cMsg,
+		size: 'large',
+		backdrop: false,
+		onEscape: true, 
+		className: 'bounce fadeOut',
+		buttons: {
+			confirm: {
+				label: '<i class="fa fa-check"></i> Accept',
+				className: 'btn-outline-success',
+				callback: function(result) {	
+
+					if ( typeof fCallback === "function") {
+
+						var row_num = oBrw.Select()
+						
+						if ( row_num.length > 0 ) {
+							var row = row_num[0]											
+							fCallback.apply(null, [row] );
+						}																			
+					}							
+				}
+			}
+		}
+	});
+	
+	var oBrw
+
+	dialog.init(function(){ 
+		oBrw = new TWebBrowse( '_twebbrwsearch' )
+		oBrw.Init()		
+
+		dialog.bind('shown.bs.modal', function(){
+			$('#_search').focus()			
+			
+			$('#_search').keypress(function(event){
+				var keycode = (event.keyCode ? event.keyCode : event.which);
+				if(keycode == '13'){
+					_Search()
+				}
+			})						
+		});								
+	})				
+	
+	this._Search = function() {					
+		
+		var cSearch = $('#_search').val()						
+		
+		var oParam = new Object()
+			oParam[ 'search' ] = cSearch
+		
+		oBrw.Loading( true )
+		
+		MsgServer( cUrl, oParam, _PostSearch )					
+	}
+	
+	this._PostSearch = function( dat ) {
+
+		oBrw.Loading( false )	
+		oBrw.SetData( dat.rows )
+		console.log( dat.rows.length )
+		$('#_total').html( dat.rows.length )
+	}									
+	
+	
+}
 
 //	-------------------------------------------------------------------------------------//
 
